[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Maze.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Configuration.tscn" type="PackedScene" id=2]
[ext_resource path="res://code/Main.gd" type="Script" id=3]
[ext_resource path="res://arts/8-BIT WONDER.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
Maze = ExtResource( 1 )

[node name="Maze" parent="." instance=ExtResource( 1 )]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Configuration" parent="CanvasLayer" instance=ExtResource( 2 )]
position = Vector2( 89.8637, 114.486 )

[node name="InProgressLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -16.0
margin_right = 160.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "GENERATING .."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.035
one_shot = true

[node name="GenerationTimer" type="Timer" parent="."]
wait_time = 0.074
one_shot = true
[connection signal="game_over" from="Maze" to="." method="_on_Maze_game_over"]
[connection signal="configuration_done" from="CanvasLayer/Configuration" to="." method="_on_Configuration_configuration_done"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="GenerationTimer" to="." method="_on_GenerationTimer_timeout"]
